tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_summary_disabled_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1 2 3 4 5: summary 6 7
Enter: switch | ctrl-u/d: scroll | Tab/alt-1…7: preview | a

Summaries off

A [commit.generation] command is configured. Enable
summaries in [TEST_CONFIG]:

  [list]
  summary = true
