tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_uncommitted.snap
---
source: tests/integration_tests/switch_picker.rs
expression: normalized
---
> [QUERY]                                                     │[PREVIEW_HEADER]
    Branch   Status        HEAD±    main↕  Remote⇅  Commit  │Enter: switch | alt-c: create | Esc: cancel | ctrl-u/d: scr
> + feature   !  ↑       +3   -1   ↑1               c605f9..│
                                                            │ tracked.txt | 4 +++-
                                                            │ 1 file changed, 3 insertions(+), 1 deletion(-)
                                                            │diff --git a/tracked.txt b/tracked.txt
                                                            │index 9415d49..1142e4d 100644
                                                            │--- a/tracked.txt
                                                            │+++ b/tracked.txt
                                                            │@@ -1 +1,3 @@
                                                            │-Original content
                                                            │+Modified content
                                                            │+New line added
                                                            │+Another line
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
