tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_uncommitted_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1: HEAD± 2 3 4 5 6 7
Enter: switch | Tab/alt-1…7: preview | alt-c: create | Esc:

 tracked.txt | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
diff --git a/tracked.txt b/tracked.txt
index [HASH]..[HASH] 100644
--- a/tracked.txt
+++ b/tracked.txt
@@ -1 +1,3 @@
-Original content
+Modified content
+New line added
+Another line
