tests/snapshots/integration__integration_tests__switch_picker__switch_picker_with_branches_list.snap
---
source: tests/integration_tests/switch_picker.rs
expression: list
---
>
    Branch           Status        HEAD±    main↕  CI
> @ main                 ^
  + active-worktree      _
  / orphan-branch       /_
