tests/snapshots/integration__integration_tests__switch_picker__switch_picker_with_branches_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1: HEAD± 2 3 4 5 6 7
Enter: switch | ctrl-u/d: scroll | Tab/alt-1…7: preview | a

○ main has no uncommitted changes
